welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: reassignment to val
				j=1+j
                                 ^Poucet:13: error: missing parameter type
			if (i=>3) {
                            ^